--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
+    "calcite-web": "github:Esri/calcite-web#v1.2.5",
+    "css-loader": "^3.1.0",
+    "node-sass": "^4.12.0",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6"
   }
