--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "ArcGIS Hub Initiative Admin",
   "version": "1.0",
   "description": "Provides in-browser tools for initiative managers.",
-  "permissions": ["storage", "declarativeContent"],
+  "permissions": ["storage", "declarativeContent", "identity"],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
