--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Andrew Tate (atate@esri.com)",
   "license": "ISC",
   "dependencies": {
+    "client-oauth2": "^4.2.5",
     "pocket-i18n": "^1.0.11",
     "preact": "^8.5.0"
   },
@@ -20,7 +21,7 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
-    "calcite-web": "github:Esri/calcite-web#v1.2.5",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^3.1.0",
     "node-sass": "^4.12.0",
     "resolve-url-loader": "^3.1.0",
