--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,16 @@
   "name": "ArcGIS Hub Initiative Admin",
   "version": "1.0",
   "description": "Provides in-browser tools for initiative managers.",
-  "permissions": ["storage", "declarativeContent", "identity"],
+  "permissions": [
+    "storage",
+    "declarativeContent",
+    "identity"
+  ],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
-  "page_action": {
+  "browser_action": {
     "default_popup": "popup.html",
     "default_title": "ArcGIS Hub Admin"
   },
