--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "Andrew Tate (atate@esri.com)",
   "license": "ISC",
   "dependencies": {
+    "@esri/arcgis-rest-auth": "^2.3.0",
+    "@esri/arcgis-rest-request": "^2.3.0",
     "client-oauth2": "^4.2.5",
+    "isomorphic-fetch": "^2.2.1",
     "pocket-i18n": "^1.0.11",
     "preact": "^8.5.0"
   },
