--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,10 @@
     "default_popup": "popup.html",
     "default_title": "ArcGIS Hub Admin"
   },
+  "icons": {
+    "16": "img/icon-16.png",
+    "48": "img/icon-48.png",
+    "128": "img/icon-128.png"
+  },
   "manifest_version": 2
 }
