--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Provides in-browser tools for initiative managers.",
   "main": "index.js",
   "scripts": {
-    "build": "npm run clean:dist && webpack --config webpack.conf.js --display-error-details && npm run copy:assets",
+    "build": "npm run clean:dist && webpack --display-error-details && npm run copy:assets",
     "clean:dist": "rm -rf dist/",
-    "copy:assets": "cp manifest.json ./src/popup.html ./dist/",
+    "copy:assets": "cp -r manifest.json ./src/popup.html ./src/assets/ ./dist/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andrew Tate (atate@esri.com)",
