--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,14 @@
     "default_popup": "popup.html",
     "default_title": "ArcGIS Hub Admin"
   },
+  "commands": {
+    "_execute_browser_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+H",
+        "mac": "MacCtrl+Shift+H"
+      }
+    }
+  },
   "icons": {
     "16": "img/icon-16.png",
     "48": "img/icon-48.png",
